--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -16,10 +16,10 @@ jobs:
       - uses: r-lib/actions/setup-r@v1
       - uses: r-lib/actions/setup-pandoc@v1
       - name: Install rmarkdown
-        run: Rscript -e 'install.packages(c("rmarkdown","bookdown","bookdownplus"))'
+        run: Rscript -e 'install.packages(c("rmarkdown", "bookdown", "bookdownplus"))'
       - name: Render Book
-        run: >
-          Rscript -e 'rmarkdown::render_site(output_format = "bookdown::gitbook", encoding = "UTF-8")'
+        run: Rscript -e 'rmarkdown::render_site(output_format = "bookdown::gitbook", encoding = "UTF-8")'
+      - uses: actions/upload-artifact@v1
         with:
           name: _book
           path: _book/
