--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ backup/
 **/*.html
 # ignore all html files except:
 !**/mathjax_header.html
-# ignore various logs and books
+# ignore various logs and intermediates
 *.log
 *.pdf
+*.rds
