Add `needs` field to the workflow file to share the artifacts between jobs.

--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -35,6 +35,7 @@ jobs:
   bookdown:
     name: Render-Book
     runs-on: macOS-latest
+    needs: preproc
     steps:
       - uses: actions/checkout@v1
       - name: Download preprocessing results
