--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -46,9 +46,9 @@ jobs:
       - uses: r-lib/actions/setup-r@v1
       - uses: r-lib/actions/setup-pandoc@v1
       - name: Install rmarkdown
-        run: Rscript -e 'install.packages(c("rmarkdown", "bookdown", "bookdownplus"))'
+        run: Rscript -e 'install.packages(c("rmarkdown", "bookdown", "bookdownplus", "downlit"))'
       - name: Render Book
-        run: Rscript -e 'rmarkdown::render_site(output_format = "bookdown::gitbook", encoding = "UTF-8")'
+        run: Rscript -e 'rmarkdown::render_site(output_format = "bookdown::bs4_book", encoding = "UTF-8")'
       - uses: actions/upload-artifact@v1
         with:
           name: _book
