--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -1,8 +1,11 @@
 on:
   push:
-     branches:
-       - main
-
+    branches:
+      - main
+  pull_request:
+    branches: main
+  # to be able to trigger a manual build
+  workflow_dispatch:
 
 
 name: renderbook
@@ -33,23 +36,23 @@ jobs:
           path: _out
 
   bookdown:
-    name: Render-Book
+    name: Render Book
     runs-on: macos-latest
     needs: preproc
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v3
       - name: Download preprocessing results
         uses: actions/download-artifact@v3
         with:
           name: preproc_output
           path: ./
-      - uses: r-lib/actions/setup-r@v1
-      - uses: r-lib/actions/setup-pandoc@v1
+      - uses: r-lib/actions/setup-r@v2
+      - uses: r-lib/actions/setup-pandoc@v2
       - name: Install rmarkdown
         run: Rscript -e 'install.packages(c("rmarkdown", "bookdown", "bookdownplus", "downlit", "xml2", "DiagrammeR"))'
       - name: Render Book
         run: Rscript -e 'rmarkdown::render_site(output_format = "bookdown::bs4_book", encoding = "UTF-8")'
-      - uses: actions/upload-artifact@v1
+      - uses: actions/upload-artifact@v3
         with:
           name: _book
           path: _book/
@@ -59,22 +62,27 @@ jobs:
 # and also add secrets for a GH_PAT and EMAIL to the repository
 # gh-action from Cecilapp/GitHub-Pages-deploy
   checkout-and-deploy:
+    name: Deploy Book
     runs-on: ubuntu-latest
     needs: bookdown
     steps:
       - name: Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@v3
       - name: Download artifact
-        uses: actions/download-artifact@v1.0.0
+        uses: actions/download-artifact@v3
         with:
           # Artifact name
           name: _book # optional
           # Destination path
           path: _book # optional
-      - name: Deploy to GitHub Pages
-        uses: Cecilapp/GitHub-Pages-deploy@v3
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Deploy 🚀
+        # only deploy when push to main
+        if: github.event_name != 'pull_request'
+        # Beware of the action permisstion as stated here:
+        # https://github.com/JamesIves/github-pages-deploy-action#permission-settings-%EF%B8%8F
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          email: nothinghy@gmail.com
-          build_dir: _book       # "_site" by default
+          # The branch the action should deploy to.
+          branch: gh-pages
+          # The folder the action should deploy. Adapt if you changed in Quarto config
+          folder: _book
