--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -30,6 +30,7 @@ jobs:
           python tools/proc_book/proc.py --tag_prefix 唐轶 --output_dir _out tag --alt books/98-anecdotes-tang-out.Rmd
           python tools/proc_book/proc.py --tag_prefix 宋轶 --output_dir _out tag --alt books/98-anecdotes-song-out.Rmd
           python tools/proc_book/proc_docx.py --output_dir _out tools/data/90-3kingdoms.docx
+          python tools/proc_book/proc_mobi.py --output_dir _out tools/data/60-24-history-literature
       - name: Archive processed books
         uses: actions/upload-artifact@v3
         with:
@@ -52,6 +53,7 @@ jobs:
       - name: Install rmarkdown
         run: Rscript -e 'install.packages(c("rmarkdown", "bookdown", "bookdownplus", "downlit", "xml2", "DiagrammeR"))'
       - name: Render Book
+        # timeout-minutes: 1
         run: Rscript -e 'rmarkdown::render_site(output_format = "bookdown::bs4_book", encoding = "UTF-8")'
       - uses: actions/upload-artifact@v3
         with:
