--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -26,10 +26,12 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r tools/proc_book/requirements.txt
       - name: Process books
+        # run: |
+        #   python tools/proc_book/proc.py --tag_prefix 唐轶 --output_dir _out tag --alt books/98-anecdotes-tang-out.Rmd
+        #   python tools/proc_book/proc.py --tag_prefix 宋轶 --output_dir _out tag --alt books/98-anecdotes-song-out.Rmd
+        #   python tools/proc_book/proc_docx.py --output_dir _out tools/data/90-3kingdoms.docx
+        #   python tools/proc_book/proc_mobi.py --output_dir _out tools/data/60-24-history-literature
         run: |
-          python tools/proc_book/proc.py --tag_prefix 唐轶 --output_dir _out tag --alt books/98-anecdotes-tang-out.Rmd
-          python tools/proc_book/proc.py --tag_prefix 宋轶 --output_dir _out tag --alt books/98-anecdotes-song-out.Rmd
-          python tools/proc_book/proc_docx.py --output_dir _out tools/data/90-3kingdoms.docx
           python tools/proc_book/proc_mobi.py --output_dir _out tools/data/60-24-history-literature
       - name: Archive processed books
         uses: actions/upload-artifact@v3
