--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -34,8 +34,8 @@ jobs:
         #   python tools/proc_book/proc.py --tag_prefix 宋轶 --output_dir _out tag --alt books/98-anecdotes-song-out.Rmd
         #   python tools/proc_book/proc_docx.py --output_dir _out tools/data/90-3kingdoms.docx
         #   python tools/proc_book/proc_mobi.py --output_dir _out tools/data/60-24-history-literature
-        run: |
-          python tools/proc_book/proc_rmd.py --output_dir _out books/90-3kingdoms.Rmd
+        # run: |
+        #   python tools/proc_book/proc_rmd.py --output_dir _out books/90-3kingdoms.Rmd
       - name: Archive processed books
         uses: actions/upload-artifact@v3
         with:
