--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -23,6 +23,7 @@ jobs:
           python-version: '3.9'
       - name: Install dependencies
         run: |
+          sudo apt-get install -y graphviz graphviz-dev
           python -m pip install --upgrade pip
           pip install -r tools/proc_book/requirements.txt
       - name: Test preproc tools with pytest
